# vidyut-py

./: .gitignore  CHANGES.md  CHANGES.rst  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  pyproject.toml  requirements.txt
src/: cheda.rs  common.rs  kosha.rs  lib.rs  prakriya.rs  sandhi.rs
src/kosha/: semantics.rs
src/prakriya/: args.rs  mod.rs
test/integration/: test_cheda.py  test_kosha.py  test_prakriya.py
test/unit/: test_cheda.py  test_kosha.py  test_prakriya.py  test_sandhi.py
test/unit/kosha/: test_lib.py  test_semantics.py
test/unit/prakriya/: test_args.py  test_lib.py
vidyut/: cheda.py  kosha.py  prakriya.py  prakriya.pyi  sandhi.py  sandhi.pyi  vidyut.pyi
vidyut/docs/source/: introduction.rst  quickstart.rst
