[package]
name = "vidyut-py"
version = "0.2.0"
edition = "2021"

[lib]
name = "vidyut"
crate-type = ["cdylib"]

[dependencies]
vidyut-cheda = { git = "https://github.com/ambuda-org/vidyut" }
vidyut-kosha = { git = "https://github.com/ambuda-org/vidyut" }
vidyut-prakriya = { git = "https://github.com/ambuda-org/vidyut" }
vidyut-sandhi = { git = "https://github.com/ambuda-org/vidyut" }

[dependencies.pyo3]
version = "0.18.0"
features = ["extension-module", "abi3-py37"]

[package.metadata.maturin]
name = "vidyut"
